feat: query translation (#1013)
* feat: add tests section in doc editor

* fix: add storybook sample data

* fix: add test UI implementation

* feat: fill model and columns dropdown for relationship matching

* fix: save tests in schema

* feat: show test details on click

* fix: edit test values

* chore: tests ui fixes

* fix: ui issues in right side panel for tests

* fix: minor issues

* fix: tooltip refactor

* fix: update tests in ui after user change data

* fix: minor issues

* fix: functional issues

* fix: cleanup

* fix: save flow for tests

* fix: markdown for code test

* chore: code cleanup

* fix: merge issues

* chore: clear duplicate tests

* chore: cleanup drawer implementation

* chore: rename functions

* fix: review comments

* feat: add config to enable tests

* fix: minor issues

* fix: relationship update issue

* fix: ui issues

* feat: add custom test option

* chore: temporary changes

* chore: edit flow update

* fix: edit/delete implementation

* fix: minor ui issues

* chore: refactor datapilot chat

* feat: working dbt custom test

* fix: new tests flow

* chore: cleanup unnecessary files

* fix: cleanup for new ui changes

* fix: for e2e tests

* fix: ui review comments

* fix: ui issues

* fix: show buttons on add

* fix: updated UI for add tests flow

* fix: accepted values interaction

* fix: for review comments

* improve: dbtprojectservice

* fix: accepted values save

* fix: duplicate interface name

* chore: clear button for accepted value

* fix: show max 3 tests by default

* fix: rename dbtprojectservice

* fix: minor UI issues

* feat: get distinct column values

* fix: error handling

* fix: insert generated test

* fix: for review comments

* fix: carry forward unknown test config

* fix: show error msg with contact us link

* fix: remove feature flag for tests

* fix: handle relationships with sources and r

--- a/package.json
+++ b/package.json
@@ -335,6 +335,11 @@
         "category": "dbt Power User"
       },
       {
+        "command": "dbtPowerUser.translateQuery",
+        "title": "Translate to other SQL dialect",
+        "category": "dbt Power User"
+      },
+      {
         "command": "dbtPowerUser.sqlToModel",
         "title": "Convert to dbt Model (Preview feature)",
         "shortTitle": "Convert to dbt Model",
@@ -549,6 +554,10 @@
         {
           "command": "dbtPowerUser.changeQuery",
           "group": "datapilot@3"
+        },
+        {
+          "command": "dbtPowerUser.translateQuery",
+          "group": "datapilot@4"
         }
       ],
       "editor/title": [
