--- a/package.json
+++ b/package.json
@@ -80,17 +80,17 @@
             "description": "Enable the new query panel in dbt.",
             "default": true
           },
-          "dbt.showSelectEdges": {
+          "dbt.lineage.showSelectEdges": {
             "type": "boolean",
             "description": "Show select edges in lineage panel.",
             "default": true
           },
-          "dbt.showNonSelectEdges": {
+          "dbt.lineage.showNonSelectEdges": {
             "type": "boolean",
             "description": "Show non-select edges in lineage panel.",
             "default": true
           },
-          "dbt.defaultLineageExpansion": {
+          "dbt.lineage.defaultExpansion": {
             "type": "number",
             "description": "By default how much lineage should expand.",
             "default": 1
