--- a/package.json
+++ b/package.json
@@ -79,6 +79,21 @@
             "type": "boolean",
             "description": "Enable the new query panel in dbt.",
             "default": true
+          },
+          "dbt.lineage.showSelectEdges": {
+            "type": "boolean",
+            "description": "Show select edges in lineage panel.",
+            "default": true
+          },
+          "dbt.lineage.showNonSelectEdges": {
+            "type": "boolean",
+            "description": "Show non-select edges in lineage panel.",
+            "default": true
+          },
+          "dbt.lineage.defaultExpansion": {
+            "type": "number",
+            "description": "By default how much lineage should expand.",
+            "default": 1
           }
         }
       },
