--- a/package.json
+++ b/package.json
@@ -372,7 +372,7 @@
       },
       {
         "command": "dbtPowerUser.altimateScan",
-        "title": "Project Health Check",
+        "title": "Project Healthcheck",
         "category": "dbt Power User",
         "icon": "$(circuit-board)"
       },
