fix: add altimate components integration

--- a/webview_panels/tsconfig.json
+++ b/webview_panels/tsconfig.json
@@ -32,5 +32,6 @@
     }
   },
   "include": ["src", "vite.config.ts"],
+  "exclude": ["src/**/*.jsx", "src/**/*.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
