--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
+  "ignorePatterns": ["./webview_panels/src/lib/altimate-components.d.ts"],
   "extends": [
     "plugin:@typescript-eslint/eslint-recommended",
     // "plugin:@typescript-eslint/recommended",
