--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/AltimateAI/vscode-dbt-power-user/issues"
   },
-  "version": "0.37.3",
+  "version": "0.37.4",
   "engines": {
     "vscode": "^1.81.0"
   },
@@ -31,7 +31,8 @@
   "keywords": [
     "dbt",
     "sql",
-    "jinja-sql"
+    "jinja-sql",
+    "dbt power user"
   ],
   "activationEvents": [
     "workspaceContains:**/dbt_project.yml"
