--- a/package.json
+++ b/package.json
@@ -124,6 +124,12 @@
             "default": 500,
             "minimum": 1
           },
+          "dbt.conversationsPollingInterval": {
+            "type": "integer",
+            "description": "Polling interval to fetch latest conversations (in seconds)",
+            "default": 120,
+            "minimum": 30
+          },
           "dbt.queryTemplate": {
             "type": "string",
             "description": "Override the default query template that is used by the `Preview SQL Query` command. Use this if your database has special syntax to limit query results",
