fix: allow yml, id type changes

--- a/webview_panels/tsconfig.json
+++ b/webview_panels/tsconfig.json
@@ -25,6 +25,7 @@
     "baseUrl": ".",
     "paths": {
       "@uicore": ["src/uiCore/index.ts"],
+      "@lib": ["src/lib/index.ts"],
       "@assets/*": ["src/assets/*"],
       "@modules/*": ["src/modules/*"],
       "@testUtils": ["src/testUtils/index.ts"],
