fixing display name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-dbt-power-user",
-  "displayName": "dbt Power User for dbt Core™",
+  "displayName": "Power User for dbt Core™",
   "description": "a.k.a dbt™ power user extension makes vscode seamlessly work with dbt: auto-complete, preview, column lineage, AI docs generation, health checks, cost estimation etc",
   "icon": "media/images/dbt.png",
   "publisher": "innoverio",
