feat: dbt collaboration (#1048)
* feat: share docs

* fix: minor updates

* fix: integrate share apis

* fix: loading state for share button

* fix: add altimate components integration

* fix: docs integration in editor area

* fix: components api helper fix

* fix: show dbt view with right shareid

* fix: generate docs before sharing

* fix: commenting flow

* fix: remove static conversation variables

* fix: users autocomplete

* fix: formatting mentions

* fix: commenting flow

* fix: code cleanup

* fix: polling conversations

* fix: interactions

* fix: enable comments only for sql and handle all resource types

* fix: altimate key check

* fix: add config to toggle collaboration feature

* fix: share docs api with project names

* chore: update components library

* fix: remove edit and delete for comments

* chore: update components

* chore: review comments

* fix: update components

* chore: add conv sources

* fix: @mention renders, multiple share docs in vscode

* fix: update components

* fix: code review

* chore: update components

* fix: merge error

* fix: load users data after dbt verification complete

* fix: allow yml, id type changes

* fix: @mention format

* fix: add space after @mention

* fix: @mentions

* fix: badge count for comments

* fix: add conv button in doc editor

* chore: description selection in docs view

* fix: view in docs editor button

* chore: code selection and desc selection updates

* fix: review comments

* chore: minor refactors

* fix: send conversations data to doc editor

* chore: updated components for conversationgroup context

* feat: conversation right panel in doc editor

* fix: conversations right panel in doc editor

* fix: conversations in doc editor

* fix: for review comments

* fix: show actions buttons after saving comment

* fix: telemetry events

* fix: new comment from doc editor show comment

* fi

--- a/package.json
+++ b/package.json
@@ -71,6 +71,11 @@
             "type": "boolean",
             "description": "Enable the new lineage panel in dbt."
           },
+          "dbt.enableCollaboration": {
+            "type": "boolean",
+            "description": "Enable dbt docs collaboration.",
+            "default": false
+          },
           "dbt.enableNewDocsPanel": {
             "type": "boolean",
             "description": "Enable the new docs panel in dbt.",
@@ -139,6 +144,12 @@
             "description": "The maximum number of rows the `Preview SQL Query` command returns.",
             "default": 500,
             "minimum": 1
+          },
+          "dbt.conversationsPollingInterval": {
+            "type": "integer",
+            "description": "Polling interval to fetch latest conversations (in seconds)",
+            "default": 120,
+            "minimum": 30
           },
           "dbt.queryTemplate": {
             "type": "string",
@@ -307,6 +318,38 @@
       ]
     },
     "commands": [
+      {
+        "command": "dbtPowerUser.resolveConversation",
+        "title": "Resolve",
+        "category": "dbt Power User"
+      },
+      {
+        "command": "dbtPowerUser.createConversation",
+        "title": "Publish",
+        "category": "dbt Power User",
+        "enablement": "!commentIsEmpty"
+      },
+      {
+        "command": "dbtPowerUser.viewInDbtDocs",
+        "title": "View in dbt docs",
+        "category": "dbt Power User"
+      },
+      {
+        "command": "dbtPowerUser.copyDbtDocsLink",
+        "title": "Copy link",
+        "category": "dbt Power User"
+      },
+      {
+        "command": "dbtPowerUser.viewInDocEditor",
+        "title": "View in documentation editor",
+        "category": "dbt Power User"
+      },
+      {
+        "command": "dbtPowerUser.replyToConversation",
+        "title": "Reply",
+        "enablement": "!commentIsEmpty",
+        "category": "dbt Power User"
+      },
       {
         "command": "dbtPowerUser.puQuickPick",
         "category": "dbt Power User",
@@ -564,6 +607,40 @@
       }
     ],
     "menus": {
+      "comments/commentThread/title": [
+        {
+          "command": "dbtPowerUser.viewInDocEditor",
+          "group": "navigation",
+          "when": "commentController == altimate-conversations && (commentThread =~ /saved/) && commentThread =~ /description/"
+        },
+        {
+          "command": "dbtPowerUser.copyDbtDocsLink",
+          "group": "navigation",
+          "when": "commentController == altimate-conversations && (commentThread =~ /saved/)"
+        },
+        {
+          "command": "dbtPowerUser.viewInDbtDocs",
+          "group": "navigation",
+          "when": "commentController == altimate-conversations && (commentThread =~ /saved/)"
+        },
+        {
+          "command": "dbtPowerUser.resolveConversation",
+          "group": "inline",
+          "when": "commentController == altimate-conversations && !commentThreadIsEmpty && (commentThread =~ /saved/)"
+        }
+      ],
+      "comments/commentThread/context": [
+        {
+          "command": "dbtPowerUser.createConversation",
+          "group": "inline@1",
+          "when": "commentController == altimate-conversations && commentThreadIsEmpty"
+        },
+        {
+          "command": "dbtPowerUser.replyToConversation",
+          "group": "inline",
+          "when": "commentController == altimate-conversations && !commentThreadIsEmpty"
+        }
+      ],
       "dbtPowerUser.datapilotSubmenu": [
         {
           "command": "dbtPowerUser.openDatapilotWithQuery",
