--- a/package.json
+++ b/package.json
@@ -86,6 +86,11 @@
             "description": "Enable the new query panel in dbt.",
             "default": true
           },
+          "dbt.enableQueryPanelV2": {
+            "type": "boolean",
+            "description": "Enable the new query panel in dbt.",
+            "default": false
+          },
           "dbt.lineage.showSelectEdges": {
             "type": "boolean",
             "description": "Show select edges in lineage panel.",
