--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
           "dbt.enableCollaboration": {
             "type": "boolean",
             "description": "Enable dbt docs collaboration.",
-            "default": false
+            "default": true
           },
           "dbt.enableNewDocsPanel": {
             "type": "boolean",
