--- a/package.json
+++ b/package.json
@@ -591,6 +591,12 @@
         "title": "Print environment variables",
         "category": "dbt Power User",
         "icon": "$(gist-secret)"
+      },
+      {
+        "command": "dbtPowerUser.troubleshoot",
+        "title": "Troubleshoot dbt extension",
+        "category": "dbt Power User",
+        "icon": "$(gist-secret)"
       }
     ],
     "keybindings": [
