feat: adding diagnostic command (#1097)
* feat: added basic troubleshoot
* feat: added python bridge status
* feat: added formatting utils
* fix: formatting
* feat: added overridden settings

--- a/package.json
+++ b/package.json
@@ -586,6 +586,12 @@
         "title": "Print environment variables",
         "category": "dbt Power User",
         "icon": "$(gist-secret)"
+      },
+      {
+        "command": "dbtPowerUser.troubleshoot",
+        "title": "Troubleshoot dbt extension",
+        "category": "dbt Power User",
+        "icon": "$(debug-console)"
       }
     ],
     "keybindings": [
