--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/AltimateAI/vscode-dbt-power-user/issues"
   },
-  "version": "0.39.2",
+  "version": "0.39.3",
   "engines": {
     "vscode": "^1.81.0"
   },
@@ -588,8 +588,8 @@
         "icon": "$(gist-secret)"
       },
       {
-        "command": "dbtPowerUser.troubleshoot",
-        "title": "Troubleshoot dbt extension",
+        "command": "dbtPowerUser.diagnostics",
+        "title": "command to collect diagnostics information for the extension",
         "category": "dbt Power User",
         "icon": "$(debug-console)"
       }
