--- a/package.json
+++ b/package.json
@@ -1163,6 +1163,7 @@
     "parse-diff": "^0.11.1",
     "python-bridge": "github:mdesmet/node-python-bridge#feat/detached",
     "reflect-metadata": "^0.2.2",
+    "semver": "^7.6.2",
     "which": "^4.0.0",
     "yaml": "^2.4.2"
   },
