--- a/package.json
+++ b/package.json
@@ -560,7 +560,7 @@
       },
       {
         "command": "dbtPowerUser.buildChildrenModels",
-        "title": "Build Downstream Models",
+        "title": "Build Downstream Models (model+)",
         "category": "dbt Power User",
         "icon": {
           "light": "./media/images/build-model_light.svg",
@@ -569,7 +569,7 @@
       },
       {
         "command": "dbtPowerUser.buildParentModels",
-        "title": "Build Upstream Models",
+        "title": "Build Upstream Models (+model)",
         "category": "dbt Power User",
         "icon": {
           "light": "./media/images/build-model_light.svg",
@@ -578,7 +578,7 @@
       },
       {
         "command": "dbtPowerUser.buildChildrenParentModels",
-        "title": "Build Upstream and Downstream Models",
+        "title": "Build Upstream and Downstream Models (+model+)",
         "category": "dbt Power User",
         "icon": {
           "light": "./media/images/build-model_light.svg",
