feat: added static lineage
WIP

WIP

feat: added new sql lineage panel

WIP

WIP

WIP

WIP

WIP

feat: added sql lineage panel

--- a/package.json
+++ b/package.json
@@ -276,6 +276,11 @@
           "id": "insights_view",
           "title": "Actions",
           "icon": "./media/images/dbt_icon.svg"
+        },
+        {
+          "id": "sql_lineage_view",
+          "title": "SQL Lineage",
+          "icon": "./media/images/dbt_icon.svg"
         }
       ]
     },
@@ -334,6 +339,13 @@
       "insights_view": [
         {
           "id": "dbtPowerUser.Insights",
+          "name": "",
+          "type": "webview"
+        }
+      ],
+      "sql_lineage_view": [
+        {
+          "id": "dbtPowerUser.SQLLineage",
           "name": "",
           "type": "webview"
         }
