--- a/new_lineage_panel/package.json
+++ b/new_lineage_panel/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "classnames": "^2.5.1",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reactflow": "^11.11.3",
     "reactstrap": "^9.2.2"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
