--- a/package.json
+++ b/package.json
@@ -780,6 +780,11 @@
           "command": "dbtPowerUser.bigqueryCostEstimate",
           "group": "dbt@4",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
+        },
+        {
+          "command": "dbtPowerUser.sqlLineage",
+          "group": "dbt@4",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         }
       ],
       "editor/title/run": [
