feat: sql lineage (#1218)
* feat: added static lineage

WIP

WIP

feat: added new sql lineage panel

WIP

WIP

WIP

WIP

WIP

feat: added sql lineage panel

* fix: merge issues

* WIP

* WIP

* fix: sql lineage

* feat: added error handling

* fix: icons

* WIP

* WIP

* WIP

* chore: code refactor

* WIP

* WIP

* WIP

* fix: added join

* WIP

* fix: layout

* fix: styling

* fix: images

* WIP

* WIp

* WIP

* WIP

* fix: theme and text

* fix: styling

* feat: added icons

* WIP

* WIP

* fix: icons

* feat: disable schema fetching

* feat: added session id

* fix: compiled sql

* WIP

* fix: icons keys

* feat: added for using schema

* feat: added sync db

* feat: handled errors

* fix: styling

* chore: code refactor

* WIP

* WIP

* WIP

* fix: unknown icon

* fix: styling

* WIP

* WIP

* feat: remove console logs

* WIP

* WIP

* WIP

---------

Co-authored-by: anandgupta42 <93243293+anandgupta42@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -619,6 +619,12 @@
         "title": "Collect diagnostics",
         "category": "dbt Power User",
         "icon": "$(debug-console)"
+      },
+      {
+        "command": "dbtPowerUser.sqlLineage",
+        "title": "SQL Visualizer (Beta)",
+        "category": "dbt Power User",
+        "icon": "$(debug-console)"
       }
     ],
     "keybindings": [
