--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -40,6 +40,7 @@
     "react-textarea-autosize": "^8.5.3",
     "reactstrap": "^9.2.1",
     "remark-gfm": "^4.0.0",
+    "use-debounce": "^10.0.1",
     "vite-plugin-svgr": "^4.2.0",
     "yaml": "^2.4.1",
     "yup": "^1.3.3"
